--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.chatgut"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -38,8 +38,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
@@ -54,6 +55,17 @@ dependencies {
 
     //Quelle: https://github.com/square/picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation "com.mikepenz:materialdrawer:7.0.0"
+
+//required support lib modules
+
+
+    implementation "androidx.annotation:annotation:1.1.0"
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
+
+// Add for NavController support
+    implementation "com.mikepenz:materialdrawer-nav:7.0.0"
 
 }
 
